--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,13 @@
   {{title}}
 </h1>
 <h2>
-  {{hero}}details!
+  {{hero.name}}details!
 </h2>
+<div>
+  <label>id:</label>{{hero.id}}</div>
+<div>
+  <label>name:</label>
+  <input [(ngModel)]="hero.name" placeholder="name">
+  </div>
   
  
