--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,13 @@
 <div>
   <label>name:</label>
   <input [(ngModel)]="hero.name" placeholder="name">
-  </div>
-  
- 
+</div>
+
+<h2>My Heroes</h2>
+<ul class="heroes">
+  <li *ngFor="let hero of heroes">
+    <span class="badge">{{hero.id}}</span> {{hero.name}}
+  </li>
+</ul>
+    
+    
