--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,21 +2,6 @@
   {{title}}
 </h1>
 
-
-<div *ngIf="selectedHero">
-  <h2>
-    {{selectedHero.name}}details!
-  </h2>
-
-  <div><label>id:</label>{{selectedHero.id}}
-  </div>
-
-  <div>
-    <label>name:</label>
-    <input [(ngModel)]="selectedHero.name" placeholder="name">
-  </div>
-</div>
-
 <h2>My Heroes</h2>
 
 <ul class="heroes">
@@ -24,3 +9,4 @@
     <span class="badge">{{hero.id}}</span> {{hero.name}}
   </li>
 </ul>
+<hero-detail [hero]="selectedHero"></hero-detail>
